Sms detection, firebase notification integration, network handler is included

--- a/app/src/main/res/layout/activity_social_connect_base.xml
+++ b/app/src/main/res/layout/activity_social_connect_base.xml
@@ -18,8 +18,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_social_connect_base"
-        app:menu="@menu/activity_social_connect_base_drawer" />
+        android:fitsSystemWindows="true"/>
+     <!--   app:headerLayout="@layout/nav_header_social_connect_base"
+        app:menu="@menu/activity_social_connect_base_drawer" -->
 
 </android.support.v4.widget.DrawerLayout>
