--- a/app/src/main/res/layout/fragment_fragment_one_app_intro.xml
+++ b/app/src/main/res/layout/fragment_fragment_one_app_intro.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="in.squarei.app.Fragments.appIntro.FragmentOneAppIntro">
+    tools:context="in.squarei.socialconnect.fragments.appIntro.FragmentOneAppIntro">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
