--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -1,22 +1,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="24dp"
     android:background="@color/colorAccent"
+    android:paddingLeft="24dp"
     android:paddingRight="24dp">
 
     <ImageView
-        android:layout_marginTop="100dp"
+        android:id="@+id/imageViewAppLogo"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_alignParentTop="true"
-        android:id="@+id/imageViewAppLogo"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp" />
     <!-- Signup Details Layout-->
     <RelativeLayout
-        android:layout_below="@+id/imageViewAppLogo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/imageViewAppLogo"
         android:layout_centerHorizontal="true">
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,41 +26,42 @@
             android:orientation="vertical">
 
             <EditText
-                android:background="@drawable/background_shape"
-                android:textColorHint="@color/white"
-                android:gravity="center"
-                android:layout_height="40dp"
                 android:id="@+id/editUserName"
                 android:layout_width="match_parent"
-                android:hint="@string/user_name" />
+                android:layout_height="40dp"
+                android:background="@drawable/background_shape"
+                android:gravity="center"
+                android:hint="@string/user_name"
+                android:textColorHint="@color/white" />
 
 
             <EditText
-                android:layout_marginTop="10dp"
-                android:background="@drawable/background_shape"
-                android:textColorHint="@color/white"
-                android:gravity="center"
-                android:layout_height="40dp"
                 android:id="@+id/editUserEmail"
                 android:layout_width="match_parent"
-                android:hint="@string/user_email" />
-
-            <EditText
+                android:layout_height="40dp"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/background_shape"
-                android:textColorHint="@color/white"
                 android:gravity="center"
-                android:layout_height="40dp"
+                android:hint="@string/user_email"
+                android:textColorHint="@color/white" />
+
+            <EditText
                 android:id="@+id/editUserMobileNumber"
                 android:layout_width="match_parent"
-                android:hint="@string/user_mobile" />
+                android:layout_height="40dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/background_shape"
+                android:gravity="center"
+                android:hint="@string/user_mobile"
+                android:textColorHint="@color/white" />
 
             <Spinner
                 android:id="@+id/spinnerSocietiesName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"/>
+                android:visibility="gone"/>
 
             <Button
                 android:id="@+id/buttonSignup"
@@ -71,12 +72,12 @@
                 android:textColor="@color/white"  />
 
             <TextView
-                android:textColor="@color/white"
                 android:id="@+id/tvLoginLink"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/already_member_button_text" />
+                android:text="@string/already_member_button_text"
+                android:textColor="@color/white" />
         </LinearLayout>
 
     </RelativeLayout>
