--- a/app/src/main/res/drawable/edit_box_background.xml
+++ b/app/src/main/res/drawable/edit_box_background.xml
@@ -2,10 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="5dp" />
-    <solid android:color="#e7e7e7" />
-    <stroke
-        android:width="1dip"
-        android:color="#fff" />
+    <solid android:color="#ededed" />
+
     <padding
         android:bottom="4dp"
         android:left="4dp"
