--- a/app/src/main/res/layout/activity_user_pass.xml
+++ b/app/src/main/res/layout/activity_user_pass.xml
@@ -1,170 +1,237 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/splash_screen"
     tools:context="in.squarei.socialconnect.activities.useraccesspackage.UserPassActivity">
 
-    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/profile_image"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:src="@mipmap/ic_launcher"
-        app:civ_border_color="@color/colorAccent"
-        app:civ_border_width="2dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.109" />
-
-
+    <!-- layout to pass user using pin -->
     <LinearLayout
         android:id="@+id/container_user_pin_enter"
-        android:layout_width="368dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/colorAccent"
-        android:orientation="horizontal"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/container_user_pin_digits_reset"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_image"
-        app:layout_constraintVertical_bias="0.324">
+        android:layout_marginTop="@dimen/margin_15"
+        android:orientation="vertical"
+        android:visibility="gone">
 
-        <EditText
-            android:id="@+id/editPassDigitOne"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:background="@drawable/background_shape"
-            android:gravity="center"
-            android:hint="*"
-            android:inputType="numberPassword"
-            android:textColorHint="@color/white" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/otp_enter_text"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
 
-        <EditText
-            android:id="@+id/editPassDigitTwo"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:background="@drawable/background_shape"
-            android:gravity="center"
-            android:hint="*"
-            android:inputType="numberPassword"
-            android:textColorHint="@color/white" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_10"
+            android:layout_marginTop="@dimen/margin_5"
+            android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/editPassDigitThree"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:background="@drawable/background_shape"
-            android:gravity="center"
-            android:hint="*"
-            android:inputType="numberPassword"
-            android:textColorHint="@color/white" />
+            <EditText
+                android:id="@+id/editPassDigitOne"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background_shape"
+                android:gravity="center"
+                android:hint="*"
+                android:inputType="numberPassword"
+                android:padding="@dimen/font_16"
+                android:textColorHint="@color/black" />
 
-        <EditText
-            android:id="@+id/editPassDigitFour"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:background="@drawable/background_shape"
-            android:gravity="center"
-            android:hint="*"
-            android:inputType="numberPassword"
-            android:textColorHint="@color/white" />
+            <EditText
+                android:id="@+id/editPassDigitTwo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/background_shape"
+                android:gravity="center"
+                android:hint="*"
+                android:inputType="numberPassword"
+                android:padding="@dimen/font_16"
+                android:textColorHint="@color/black" />
+
+            <EditText
+                android:id="@+id/editPassDigitThree"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/background_shape"
+                android:gravity="center"
+                android:hint="*"
+                android:inputType="numberPassword"
+                android:padding="@dimen/font_16"
+                android:textColorHint="@color/black" />
+
+            <EditText
+                android:id="@+id/editPassDigitFour"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/background_shape"
+                android:gravity="center"
+                android:hint="*"
+                android:inputType="numberPassword"
+                android:padding="@dimen/font_16"
+                android:textColorHint="@color/black" />
+        </LinearLayout>
+
     </LinearLayout>
 
-    <RelativeLayout
+
+    <!-- layout to set user using pin -->
+    <LinearLayout
         android:id="@+id/container_user_pin_digits_reset"
-        android:layout_width="368dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="112dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="-12dp"
-        android:layout_marginTop="8dp"
-        android:padding="16dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="@dimen/margin_15"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/otp_set_pin_text"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
 
         <LinearLayout
             android:id="@+id/linearDigitHolder2"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:background="@color/colorAccent"
+            android:layout_gravity="center_horizontal"
             android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/editPassDigitOne2"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:background="@drawable/background_shape"
                 android:gravity="center"
                 android:hint="*"
                 android:inputType="numberPassword"
-                android:textColorHint="@color/white" />
+                android:padding="@dimen/font_16"
+                android:textColorHint="@color/black" />
 
             <EditText
                 android:id="@+id/editPassDigitTwo2"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:background="@drawable/background_shape"
                 android:gravity="center"
                 android:hint="*"
                 android:inputType="numberPassword"
-                android:textColorHint="@color/white" />
+                android:padding="@dimen/font_16"
+                android:textColorHint="@color/black" />
 
             <EditText
                 android:id="@+id/editPassDigitThree2"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:background="@drawable/background_shape"
                 android:gravity="center"
                 android:hint="*"
                 android:inputType="numberPassword"
-                android:textColorHint="@color/white" />
+                android:padding="@dimen/font_16"
+                android:textColorHint="@color/black" />
 
             <EditText
                 android:id="@+id/editPassDigitFour2"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:background="@drawable/background_shape"
                 android:gravity="center"
                 android:hint="*"
                 android:inputType="numberPassword"
-                android:textColorHint="@color/white" />
+                android:padding="@dimen/font_16"
+                android:textColorHint="@color/black" />
         </LinearLayout>
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_10"
+            android:text="@string/otp_set_confirm_pin_text"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
+
+        <LinearLayout
+            android:id="@+id/linearDigitHolder3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/editPassDigitOne3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background_shape"
+                android:gravity="center"
+                android:hint="*"
+                android:inputType="numberPassword"
+                android:padding="@dimen/font_16"
+                android:textColorHint="@color/black" />
+
+            <EditText
+                android:id="@+id/editPassDigitTwo3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/background_shape"
+                android:gravity="center"
+                android:hint="*"
+                android:inputType="numberPassword"
+                android:padding="@dimen/font_16"
+                android:textColorHint="@color/black" />
+
+            <EditText
+                android:id="@+id/editPassDigitThree3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/background_shape"
+                android:gravity="center"
+                android:hint="*"
+                android:inputType="numberPassword"
+                android:padding="@dimen/font_16"
+                android:textColorHint="@color/black" />
+
+            <EditText
+                android:id="@+id/editPassDigitFour3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/background_shape"
+                android:gravity="center"
+                android:hint="*"
+                android:inputType="numberPassword"
+                android:padding="@dimen/font_16"
+                android:textColorHint="@color/black" />
+        </LinearLayout>
+
+        <Button
             android:id="@+id/tvSetUserPin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/linearDigitHolder2"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/margin_20"
+            android:background="@drawable/rounded_button_background"
+            android:paddingLeft="@dimen/margin_60"
+            android:paddingRight="@dimen/margin_60"
             android:text="@string/set_pin"
-            android:textColor="@color/black" />
+            android:textColor="@color/white"
+            android:textSize="@dimen/font_16"
+            android:textStyle="bold" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
