--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
+    android:background="@drawable/splash_screen"
     android:paddingLeft="24dp"
     android:paddingRight="24dp">
 
@@ -17,12 +17,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/imageViewAppLogo"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/margin_20">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
             android:orientation="vertical">
 
             <EditText
@@ -32,28 +33,102 @@
                 android:background="@drawable/background_shape"
                 android:gravity="center"
                 android:hint="@string/user_name"
-                android:textColorHint="@color/white" />
+                android:textColorHint="@color/white"
+                android:visibility="gone" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/email_title"
+                android:textSize="@dimen/font_14" />
 
-            <EditText
-                android:id="@+id/editUserEmail"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="10dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_5"
                 android:background="@drawable/background_shape"
-                android:gravity="center"
-                android:hint="@string/user_email"
-                android:textColorHint="@color/white" />
+                android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
+                android:paddingTop="10dp">
 
-            <EditText
-                android:id="@+id/editUserMobileNumber"
+                <ImageView
+                    android:id="@+id/ivImageEmail"
+                    android:layout_width="@dimen/input_icon_size"
+                    android:layout_height="@dimen/input_icon_size"
+                    android:padding="@dimen/margin_5"
+                    android:src="@drawable/email_icon" />
+
+                <View
+                    android:id="@+id/line1"
+                    android:layout_width="1dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/editUserEmail"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_toRightOf="@+id/ivImageEmail"
+                    android:background="#dcdcdc" />
+
+                <EditText
+                    android:id="@+id/editUserEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/line1"
+                    android:background="@android:color/transparent"
+                    android:hint="@string/user_email"
+                    android:textColor="@color/text_input_color"
+                    android:textColorHint="@color/text_hint_color"
+                    android:textSize="@dimen/font_14" />
+            </RelativeLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_10"
+                android:text="@string/mobile_title"
+                android:textSize="@dimen/font_14" />
+
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="10dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_5"
                 android:background="@drawable/background_shape"
-                android:gravity="center"
-                android:hint="@string/user_mobile"
-                android:textColorHint="@color/white" />
+                android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
+                android:paddingTop="10dp">
+
+                <ImageView
+                    android:id="@+id/ivImageMobile"
+                    android:layout_width="@dimen/input_icon_size"
+                    android:layout_height="@dimen/input_icon_size"
+                    android:padding="@dimen/margin_5"
+                    android:src="@drawable/mobile_icon" />
+
+                <View
+                    android:id="@+id/line2"
+                    android:layout_width="1dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/editUserMobileNumber"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_toRightOf="@+id/ivImageMobile"
+                    android:background="#dcdcdc" />
+
+                <EditText
+                    android:id="@+id/editUserMobileNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/line2"
+                    android:background="@android:color/transparent"
+                    android:hint="@string/user_mobile"
+                    android:textColor="@color/text_input_color"
+                    android:textColorHint="@color/text_hint_color"
+                    android:textSize="@dimen/font_14" />
+            </RelativeLayout>
+
 
             <Spinner
                 android:id="@+id/spinnerSocietiesName"
@@ -61,23 +136,25 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <Button
                 android:id="@+id/buttonSignup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Register"
-                android:textColor="@color/white"  />
+                android:layout_marginTop="@dimen/margin_25"
+                android:background="@drawable/rounded_button_background"
+                android:text="SIGN UP"
+                android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/tvLoginLink"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_15"
                 android:gravity="center"
                 android:text="@string/already_member_button_text"
-                android:textColor="@color/white" />
+                android:textColor="@color/text_hint_color" />
         </LinearLayout>
 
     </RelativeLayout>
