--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -26,7 +26,7 @@
                 android:layout_gravity="right"
                 android:layout_marginRight="@dimen/margin_10"
                 android:padding="@dimen/margin_5"
-                android:src="@drawable/pencil"/>
+                android:src="@drawable/pencil" />
         </android.support.v7.widget.Toolbar>
 
 
@@ -61,7 +61,6 @@
                 android:textColor="@color/green"
                 android:textSize="@dimen/font_14"
                 android:textStyle="bold" />
-
 
 
             <LinearLayout
@@ -156,13 +155,32 @@
                     android:textColor="@color/text_color"
                     android:textSize="@dimen/font_16" />
 
-                <EditText
-                    android:id="@+id/editUserMobilenumber"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/edit_box_background"
-                    android:enabled="false"
-                    android:padding="@dimen/margin_5" />
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/editUserMobilenumber"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:background="@drawable/edit_box_background"
+                        android:enabled="false"
+                        android:inputType="number"
+                        android:padding="@dimen/margin_5" />
+
+                    <Switch
+                        android:id="@+id/switchPhonePolicy"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:checked="true"
+                        android:enabled="false"
+                        android:textColor="@color/text_color" />
+                </LinearLayout>
+
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -179,6 +197,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:padding="@dimen/margin_5">
+
                     <RadioButton
                         android:id="@+id/radioBtnMale"
                         android:layout_width="0dp"
@@ -187,17 +206,62 @@
                         android:enabled="false"
                         android:text="Male"
                         android:textColor="@color/text_color" />
+
                     <RadioButton
                         android:id="@+id/radioBtnFemale"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:checked="true"
                         android:enabled="false"
                         android:text="Female"
                         android:textColor="@color/text_color" />
                 </RadioGroup>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:paddingBottom="@dimen/margin_5"
+                    android:text="Privacy"
+                    android:textColor="@color/text_color"
+                    android:textSize="@dimen/font_16" />
+
+                <RadioGroup
+                    android:id="@+id/radioGroupUserPrivacy"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/margin_5">
+
+                    <RadioButton
+                        android:id="@+id/radioBtnPublic"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:checked="true"
+                        android:enabled="false"
+                        android:text="Public"
+                        android:textColor="@color/text_color" />
+
+                    <RadioButton
+                        android:id="@+id/radioBtnPrivate"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:enabled="false"
+                        android:text="Private"
+                        android:textColor="@color/text_color" />
+
+                    <RadioButton
+                        android:id="@+id/radioBtnOnlyMe"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:checked="false"
+                        android:enabled="false"
+                        android:text="Only Me"
+                        android:textColor="@color/text_color" />
+                </RadioGroup>
 
                 <TextView
                     android:layout_width="wrap_content"
