--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -46,9 +46,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_centerHorizontal="true"
-                android:src="@drawable/man"
-                app:civ_border_color="#3c3c3c"
-                app:civ_border_width="2dp" />
+                android:src="@drawable/man" />
 
             <TextView
                 android:id="@+id/tvUserProfileName"
@@ -61,6 +59,16 @@
                 android:textColor="@color/green"
                 android:textSize="@dimen/font_14"
                 android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tvUserStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvUserProfileName"
+                android:layout_centerHorizontal="true"
+                android:paddingBottom="@dimen/margin_5"
+                android:text="fghfy hfyh h"
+                android:textColor="@color/text_color_grey"
+                android:textSize="@dimen/font_12" />
 
 
             <LinearLayout
@@ -175,6 +183,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="@dimen/margin_5"
                         android:layout_weight="1"
                         android:checked="true"
                         android:enabled="false"
